package Estructurales.Decorator;

public interface IBebida {
    //Componente (interfaz)
    double obtenerCosto();
    String obtenerDescripcion();
}
